updated the basic config file

--- a/config.json
+++ b/config.json
@@ -1,3 +1,14 @@
 {
-  "":"",
+  "%servername%":"myserver",
+  "telegram": {
+    "useYourOwnBot":"false",
+    "yourBotApiKey":"",
+    "message":"Soemone just login to %username% on %servername% with this ip address: %ip !",
+  },
+  "urls":[
+    {
+      "url":"http://exempleurl.com/sendmsg?msg=%message%",
+      "%message%":"Soemone just login to %username% on %servername% with this ip address: %ip !"
+    }
+  ]
 }
