test version of the script

--- a/config.json
+++ b/config.json
@@ -1,5 +1,6 @@
 {
   "%servername%":"myserver",
+  "authlogPath":"/var/log/auth.log",
   "telegram": {
     "useYourOwnBot":"false",
     "yourBotApiKey":"",
